Add public version

--- a/public/index.html
+++ b/public/index.html
@@ -154,10 +154,7 @@
               <div class="certificates__row">
                 <h2 class="certificates__name">Свидетельство и cертификаты</h2><a class="certificates__all-link" href="#" aria-label="Посмотреть все сертификаты">Все сертификаты »</a>
               </div>
-              <div class="certificates__list"><a class="certificates__link" href="img/content/certificate_1.jpg" aria-label="Увеличить фото">
-                  <picture><img class="certificates__thumb" src="img/content/certificate-thumb_1.jpg" alt="Сертификат о повышении квалификации"></picture></a><a class="certificates__link" href="img/content/certificate_2.jpg" aria-label="Увеличить фото">
-                  <picture><img class="certificates__thumb" src="img/content/certificate-thumb_2.jpg" alt="Свидетельсво о регистрации авдокатского образования"></picture></a><a class="certificates__link" href="img/content/certificate_3.jpg" aria-label="Увеличить фото">
-                  <picture><img class="certificates__thumb" src="img/content/certificate-thumb_3.jpg" alt="Сертификат о повышении квалификации"></picture></a>
+              <div class="certificates__list"><a class="certificates__link" href="img/content/certificate_1.jpg" aria-label="Увеличить фото"><img class="certificates__thumb" src="img/content/certificate-thumb_1.jpg" alt="Сертификат о повышении квалификации"></a><a class="certificates__link" href="img/content/certificate_2.jpg" aria-label="Увеличить фото"><img class="certificates__thumb" src="img/content/certificate-thumb_2.jpg" alt="Свидетельсво о регистрации авдокатского образования"></a><a class="certificates__link" href="img/content/certificate_3.jpg" aria-label="Увеличить фото"><img class="certificates__thumb" src="img/content/certificate-thumb_3.jpg" alt="Сертификат о повышении квалификации"></a>
               </div>
             </div>
           </section>
@@ -180,11 +177,17 @@
           <p class="footer__copyright">Юридические услуги. © 2018 Все права защищены.</p>
           <ul class="social">
             <li class="social__item"><a class="social__link" href="https://instagram.com" aria-label="Мы в Instagram">
-                <picture class="social__icon"><img src="img/content/insta.png" alt="Мы в Instagram"></picture></a></li>
+                <picture class="social__icon">
+                  <source srcset="img/content/insta.webp" type="image/webp"><img src="img/content/insta.png" alt="Мы в Instagram">
+                </picture></a></li>
             <li class="social__item"><a class="social__link" href="https://vk.com" aria-label="Мы во Вконтакте">
-                <picture class="social__icon"><img src="img/content/vk.png" alt="Мы во Вконтакте"></picture></a></li>
+                <picture class="social__icon">
+                  <source srcset="img/content/vk.webp" type="image/webp"><img src="img/content/vk.png" alt="Мы во Вконтакте">
+                </picture></a></li>
             <li class="social__item"><a class="social__link" href="https://facebook.com" aria-label="Мы в Facebook">
-                <picture class="social__icon"><img src="img/content/fb.png" alt="Мы в Facebook"></picture></a></li>
+                <picture class="social__icon">
+                  <source srcset="img/content/fb.webp" type="image/webp"><img src="img/content/fb.png" alt="Мы в Facebook">
+                </picture></a></li>
           </ul>
         </div>
       </div>
