Add form validation

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,600&amp;subset=cyrillic" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
     <!-- SEO Задание тега Title-->
     <title>Адвокатский кабинет Якубов Рашад Киязович</title>
     <!-- SEO Задание тега Description-->
@@ -101,7 +101,7 @@
               <section class="advantages">
                 <h3 class="visually-hidden">Преимущества</h3>
                 <ul class="advantages__list">
-                  <li class="advantages__item"><img class="advantages__icon" src="img/content/legal-hammer.svg" alt="Судейский молоток" width="62" height="60">Участие в судах
+                  <li class="advantages__item"><img class="advantages__icon" src="img/content/legal-hammer.svg" alt="Судейский молоток" width="60" height="60">Участие в судах
                   </li>
                   <li class="advantages__item"><img class="advantages__icon" src="img/content/wallet-filled-money-tool.svg" alt="Кошелек" width="62" height="60">Разумные цены
                   </li>
@@ -143,7 +143,7 @@
                 </div>
                 <div class="feedback__field feedback__field--textarea">
                   <label class="feedback__label" for="message">Текст письма:</label>
-                  <textarea class="feedback__textarea" id="message" name="message" title="Введите текст (не менее 25 символов)" minlength="25" placeholder="Тексто должен содержать минимум 25 символов"></textarea>
+                  <textarea class="feedback__textarea" id="message" name="message" title="Введите текст" placeholder="Введите текст"></textarea>
                 </div>
                 <button class="feedback__send" type="submit">Отправить</button>
               </form>
@@ -192,6 +192,6 @@
         </div>
       </div>
     </footer>
-    <script src="js/scripts.js"></script>
+    <script src="js/scripts.min.js"></script>
   </body>
 </html>
